# HackAI_230523

./: .env  README.md  pyproject.toml
currency_alert/: agent.py  agent1q24xmnlpdy_data.json  agent1q2j4fqz3j4_data.json  agent1qdava08yk4_data.json  agent1qdtmtzt0xs_data.json  agent1qv2dxl0lth_data.json  all_agent.py  db.sqlite3  manage.py
currency_alert/Main/: admin.py  models.py  utils.py  views.py
currency_alert/Main/migrations/: 0001_initial.py  0002_alter_customer_phone_number.py  0003_alert.py  0004_agent.py  0005_remove_agent_customer_agent_user_customer_user.py  0006_rename_agent_user_agent.py  0007_forget.py  0008_alter_forget_forget_password_token.py
currency_alert/Main/static/css/: styles.css  styles1.css  styles_agent.css  styles_currency.css  styles_password.css
currency_alert/Main/static/js/: back.js  exchange.js  threshold.js
currency_alert/Main/templates/: alert.html  currency.html  forgot_password.html  nice.html  nice1.html  password_reset_confirm.html  password_reset_email.html  signup.html  temp.html  threshold.html
currency_alert/currency_alert/: asgi.py  settings.py  urls.py  wsgi.py
