[tool.poetry]
name = "foreign-exchange"
version = "0.1.0"
description = ""
authors = ["Anuraag001 <anuraagbv1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
requests = "^2.31.0"
django = "^4.2.5"
uagents = "^0.6.2"
daphne = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
